[gd_scene load_steps=8 format=2]

[ext_resource path="res://levels/BaseWorld.gd" type="Script" id=1]
[ext_resource path="res://levels/GameCamera.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/floors.meshlib" type="MeshLibrary" id=3]
[ext_resource path="res://levels/walls.meshlib" type="MeshLibrary" id=4]
[ext_resource path="res://levels/WorldInputHandler.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/navigation/Nav.tres" type="MeshLibrary" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 65, 1, 26 )

[node name="BaseWorld" type="Spatial"]
script = ExtResource( 1 )

[node name="KillYArea" type="Area" parent="."]
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="KillYArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0 )
shape = SubResource( 1 )

[node name="WorldInputHandler" parent="." instance=ExtResource( 5 )]

[node name="GameCamera" parent="." instance=ExtResource( 2 )]

[node name="Navigation" type="Navigation" parent="."]

[node name="NavGrid" type="GridMap" parent="Navigation"]
mesh_library = ExtResource( 6 )
cell_size = Vector3( 1, 1, 1 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 0, 0 )
}

[node name="FloorGrid" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0 )
mesh_library = ExtResource( 3 )
cell_size = Vector3( 2, 1, 2 )
data = {
"cells": PoolIntArray( 0, 0, 3, 1, 0, 3, 2, 0, 3, 3, 0, 3, 4, 0, 3, 5, 0, 3, 6, 0, 3, 65529, 0, 3, 65530, 0, 3, 65531, 0, 3, 65532, 0, 3, 65533, 0, 3, 65534, 0, 3, 65535, 0, 3, 0, 1, 3, 1, 1, 3, 2, 1, 3, 3, 1, 3, 4, 1, 3, 5, 1, 3, 6, 1, 3, 65529, 1, 3, 65530, 1, 3, 65531, 1, 3, 65532, 1, 3, 65533, 1, 3, 65534, 1, 3, 65535, 1, 3, 0, 2, 3, 1, 2, 3, 2, 2, 3, 3, 2, 3, 4, 2, 3, 5, 2, 3, 6, 2, 3, 65528, 2, 3, 65529, 2, 3, 65530, 2, 3, 65531, 2, 3, 65532, 2, 3, 65533, 2, 3, 65534, 2, 3, 65535, 2, 3, 0, 3, 3, 1, 3, 3, 2, 3, 3, 3, 3, 3, 4, 3, 3, 5, 3, 3, 6, 3, 3, 65528, 3, 3, 65529, 3, 3, 65530, 3, 3, 65531, 3, 3, 65532, 3, 3, 65533, 3, 3, 65534, 3, 3, 65535, 3, 3, 0, 65532, 3, 1, 65532, 3, 2, 65532, 3, 3, 65532, 3, 4, 65532, 3, 5, 65532, 3, 6, 65532, 3, 65528, 65532, 3, 65529, 65532, 3, 65530, 65532, 3, 65531, 65532, 3, 65532, 65532, 3, 65533, 65532, 3, 65534, 65532, 3, 65535, 65532, 3, 0, 65533, 3, 1, 65533, 3, 2, 65533, 3, 3, 65533, 3, 4, 65533, 3, 5, 65533, 3, 6, 65533, 3, 65528, 65533, 3, 65529, 65533, 3, 65530, 65533, 3, 65531, 65533, 3, 65532, 65533, 3, 65533, 65533, 3, 65534, 65533, 3, 65535, 65533, 3, 0, 65534, 3, 1, 65534, 3, 2, 65534, 3, 3, 65534, 3, 4, 65534, 3, 5, 65534, 3, 6, 65534, 3, 65529, 65534, 3, 65530, 65534, 3, 65531, 65534, 3, 65532, 65534, 3, 65533, 65534, 3, 65534, 65534, 3, 65535, 65534, 3, 0, 65535, 3, 1, 65535, 3, 2, 65535, 3, 3, 65535, 3, 4, 65535, 3, 5, 65535, 3, 6, 65535, 3, 65529, 65535, 3, 65530, 65535, 3, 65531, 65535, 3, 65532, 65535, 3, 65533, 65535, 3, 65534, 65535, 3, 65535, 65535, 3 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="WallsGrid" type="GridMap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
mesh_library = ExtResource( 4 )
cell_size = Vector3( 1, 4, 1 )
data = {
"cells": PoolIntArray(  )
}
__meta__ = {
"_editor_clip_": 0
}

[connection signal="body_entered" from="KillYArea" to="." method="_on_KillYArea_body_entered"]
